# ecosystem-sim

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  BLUEPRINT.md  CLAUDE.md  CLAUDE_CODEX_GEMINI_HANDOFF_SOP.md  Dockerfile.backend  Dockerfile.frontend  GROK.md  PRD.md  README.md  SECURITY.md  SOP_QUESTIONNAIRE.md  TESTING.md  devtrack.md  docker-compose.yml  governance.yaml  logs.txt  package.json  roadmap.md
backend/: academic_miner.py  embodied_qa.py  requirements-optional.txt  requirements.txt  server.py  verify_db_architecture.py  worker.py  workflow_runner.py
constellation/: GEMS.md  constellation-doctor.sh  qbts.json
crates/universal-sim/: Cargo.toml
crates/universal-sim/src/: lib.rs
docs/: AGY-WORKFLOW-VISION.md  ENV-KEYS-REGISTER.md  PLAYBOOK.md  TODO-PLACEHOLDER-AUDIT.md  WORKFLOW-CONTRACT.md
domain-synthesizer/: compiler.py  test_compiler.py
reports/: delete_index.py  red_team_audit_azure_quantum_simulated_annealing_20260720124559.md  red_team_audit_azure_quantum_simulated_annealing_20260720124747.md  red_team_audit_azure_quantum_simulated_annealing_20260720124921.md  red_team_audit_azure_quantum_simulated_annealing_20260720125054.md  red_team_audit_azure_quantum_simulated_annealing_20260720125230.md  red_team_audit_azure_quantum_simulated_annealing_20260720125402.md  red_team_audit_azure_quantum_simulated_annealing_20260720125534.md  red_team_audit_azure_quantum_simulated_annealing_20260720125706.md  red_team_audit_azure_quantum_simulated_annealing_20260720125840.md  (+436 more)
scenarios/: dcoop_constellation_twin.json  (+1 more)
(+31 files in other folders)
